# antiglitch

./: LICENSE  README.md  model.py  pyproject.toml  utils.py
antiglitch/: __init__.py  cplxdist.py  model.py  utils.py
data/: TB_antiglitch_aLIGO140Mpc_98.npy  all_PE.json  all_PE_mle.json  all_PE_v3.json  gspy-1month.json  key2gspy.pkl
notebooks/: glitch_inference.ipynb  glitch_inference_physical.ipynb  glitch_model_paper.ipynb  paper_plots.ipynb  stack_glitches.ipynb  view_glitchmodel_results.ipynb
plots/: plot_gspy.ipynb  plot_inference_physical.ipynb  plot_joined.ipynb  plot_qscan.ipynb  plot_qscanRux.ipynb  plot_results.ipynb
