[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "antiglitch"
version = "0.0.1"
authors = [
  { name="Andrew Lundgren", email="andrew.lundgren@port.ac.uk" },
]
description = "Remove glitches using Bayesian inference of a quasi-physical model"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy", "scipy", "jax", "numpyro"
]